--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.0.10",
+    "next": "^12.1.6",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-intersection-observer": "^9.2.2",
+    "react-scroll-into-view": "^1.12.0"
   },
   "devDependencies": {
     "eslint": "8.8.0",
